implement spinner input for status and update status color depending on contents

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,10 @@
     <string name="title">Title</string>
     <string name="description">Description</string>
 
+    <string-array name="status">
+        <item>Planning</item>
+        <item>In Progress</item>
+        <item>Completed</item>
+        <item>Dropped</item>
+    </string-array>
 </resources>
